cmake_minimum_required(VERSION 3.27)
project(Projektc)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Projektc
        main.cpp
        Swiat.cpp
        Swiat.h
        Organizm.h
        Organizm.h
        Zwierze.h
        Zwierze.cpp
        Organizm.cpp
        Wilk.cpp
        Kontroller.h
        Kontroller.cpp
        Wektor2d.h
        Komentator.cpp
        Owca.h
        Owca.cpp
        Czlowiek.h
        Czlowiek.cpp
        Roslina.h
        Roslina.cpp
        Antylopa.h
        Antylopa.cpp
        Lis.h
        Lis.cpp
        Zolw.h
        Zolw.cpp
        Pliki.h
        Pliki.cpp
        Trawa.h
        Trawa.cpp
        Mlecz.h
        Mlecz.cpp
        Guarana.h
        Guarana.cpp
        WilczeJagody.h
        WilczeJagody.cpp
        BarszczSosnowskiego.h
        BarszczSosnowskiego.cpp)
